--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.3",
+    "lucide-react": "^0.525.0",
     "nextstepjs": "^2.1.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
