--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-grid-layout": "^1.5.2",
+    "react-grid-layout": "^1.3.4",
+    "react-joyride": "^2.9.3",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
